secondfile/objects/DHStatus_ASR_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-ASR Details</description>
    <fields>
        <fullName>ACTL_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - ACTL CLLI Code</description>
        <label>ACTL CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_End_Point_Circuit_Location__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Actual End Point Circuit Location</description>
        <label>Actual End Point Circuit Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Order_Confirmation_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Actual Order Confirmation Date</description>
        <label>Actual Order Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Order_Delivery_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Actual Order Delivery Date</description>
        <label>Actual Order Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Format_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Address Format Code</description>
        <label>Address Format Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Street_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Assigned Street Number</description>
        <label>Assigned Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Cancellation Reason Code</description>
        <label>Cancellation Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_ACTL_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Carrier ACTL Code</description>
        <label>Carrier ACTL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Plan_Test_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Carrier Plan Test Date</description>
        <label>Carrier Plan Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_Service_Center__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Carrier Service Center</description>
        <label>Carrier Service Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Location__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Circuit Location</description>
        <label>Circuit Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connecting_Facility_Assignment__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Connecting Facility Assignment</description>
        <label>Connecting Facility Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Current Due Date</description>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_End_VLAN_Bottom__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Customer End VLAN Bottom</description>
        <label>Customer End VLAN Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_End_VLAN_Top__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Customer End VLAN Top</description>
        <label>Customer End VLAN Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Exch_Carrier_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Customer Exch Carrier Circuit ID</description>
        <label>Customer Exch Carrier Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - DHStatus - Update Deal Hash Details</description>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-ASR Details</relationshipLabel>
        <relationshipName>DHStatus_ASR_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-ASR Details</relationshipLabel>
        <relationshipName>DHStatus_ASR_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Layout_Report_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Design Layout Report Date</description>
        <label>Design Layout Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ECC_KT_Seg__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - ECC KT Seg</description>
        <label>ECC KT Seg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_Circuit_Location__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - End Point Circuit Location</description>
        <label>End Point Circuit Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Carrier_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Exchange Carrier Circuit ID</description>
        <label>Exchange Carrier Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Order_Confirmation_Date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Expected Order Confirmation Date</description>
        <label>Expected Order Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Order_Delivery_date__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Expected Order Delivery date</description>
        <label>Expected Order Delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedite_Indicator__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Expedite Indicator</description>
        <label>Expedite Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Exch_Carrier_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Gateway Exch Carrier Circuit ID</description>
        <label>Gateway Exch Carrier Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementor_Contact_Name__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Implementor Contact Name</description>
        <label>Implementor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementor_Contact_Phone_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Implementor Contact Phone Number</description>
        <label>Implementor Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initiator_Contact_Name__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Initiator Contact Name</description>
        <label>Initiator Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator_Contact_Phone_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Initiator Contact Phone Number</description>
        <label>Initiator Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Jack_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Jack Code</description>
        <label>Jack Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Jack Number</description>
        <label>Jack Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Position__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Jack Position</description>
        <label>Jack Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Status__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Jack Status</description>
        <label>Jack Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lec_Connecting_Facility_Assignment__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Lec Connecting Facility Assignment</description>
        <label>Lec Connecting Facility Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lec_Order_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Lec Order Number</description>
        <label>Lec Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Action__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Leg Action</description>
        <label>Leg Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Serving_Office__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Local Serving Office</description>
        <label>Local Serving Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Customer_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Master Customer Number</description>
        <label>Master Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mechanized_Indicator__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Mechanized Indicator</description>
        <label>Mechanized Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multipoint_LEG_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Multipoint LEG Number</description>
        <label>Multipoint LEG Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Channel_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Network Channel Code</description>
        <label>Network Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Channel_Interface__c</fullName>
        <label>Network Channel Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sec_Locations__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Number of Sec Locations</description>
        <label>Number of Sec Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCO_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - OCO CLLI Code</description>
        <label>OCO CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_USO_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Original USO Number</description>
        <label>Original USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Carrier_Service_Center__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Other Carrier Service Center</description>
        <label>Other Carrier Service Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Project Number</description>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_VLAN_Bottom__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Provider VLAN Bottom</description>
        <label>Provider VLAN Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_VLAN_Top__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Provider VLAN Top</description>
        <label>Provider VLAN Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Purchase Order Number</description>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Reference Number</description>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_PO_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Related PO Number</description>
        <label>Related PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSWC_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - SSWC CLLI Code</description>
        <label>SSWC CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sec_Connecting_Facility_Assignment__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Sec Connecting Facility</description>
        <label>Sec Connecting Facility Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sec_Network_Channel_Interface__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Sec Network Channel Interface</description>
        <label>Sec Network Channel Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Location__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Secondary Location</description>
        <label>Secondary Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Due__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Service Order Due</description>
        <label>Service Order Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serving_Wire_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Serving Wire CLLI Code</description>
        <label>Serving Wire CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Direction__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Direction</description>
        <label>Street Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Name</description>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Prefix__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Number Prefix</description>
        <label>Street Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Suffix__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Number Suffix</description>
        <label>Street Number Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Number</description>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Trailing_Direction__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Trailing Direction</description>
        <label>Street Trailing Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Street Type</description>
        <label>Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>RDS-Deal Hash - Update Deal Hash Details - ASR Details - Zip</description>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-ASR Details</label>
    <nameField>
        <displayFormat>ASR-{00000}</displayFormat>
        <label>DHStatus-ASR Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-ASR Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>